[project]
name = "inhand"
version = "0.0.1"

dependencies=[
    "nerfstudio"
]

[tool.setuptools.packages.find]
include = ["inhand*"]

[project.entry-points.'nerfstudio.method_configs']
ihgs = 'inhand.ih_config:ihgs_method'
ihgs_fast_merged = 'inhand.ih_config:ihgs_fast_merged'
ihgs_full_merged = 'inhand.ih_config:ihgs_full_merged'
